--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/user.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/resources/user.yml
@@ -6,7 +6,7 @@ sylius_resource:
         nucms.user:
             driver: doctrine/orm
             classes:
-                model: Nugato\Bundle\NuCmsBundle\Entity\User\User
+                model: Nugato\Bundle\NuCmsBundle\Component\User\Entity\User
 
 sylius_user:
     driver: doctrine/orm
@@ -14,12 +14,12 @@ sylius_user:
         admin:
             user:
                 classes:
-                    model: Nugato\Bundle\NuCmsBundle\Entity\User\User
+                    model: Nugato\Bundle\NuCmsBundle\Component\User\Entity\User
                     repository: Sylius\Bundle\UserBundle\Doctrine\ORM\UserRepository
                     # @todo with _remember_me form
                     interface: Sylius\Component\User\Model\UserInterface
         oauth:
             user:
                 classes:
-                    model: Nugato\Bundle\NuCmsBundle\Entity\User\UserOAuth
+                    model: Nugato\Bundle\NuCmsBundle\Component\User\Entity\UserOAuth
                     interface: Sylius\Component\User\Model\UserOAuthInterface
