--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/component/doctrine/Locale.Entity.Locale.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/component/doctrine/Locale.Entity.Locale.orm.yml
@@ -1,7 +1,7 @@
 # This file is part of the NuCms package.
 # (c) Jacek Bednarek
 
-Nugato\Bundle\NuCmsBundle\Entity\Locale:
+Nugato\Bundle\NuCmsBundle\Component\Locale\Entity\Locale:
     type: entity
     table: nucms_locale
     lifecycleCallbacks: {  }
