--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids/admin/locale.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids/admin/locale.yml
@@ -7,7 +7,7 @@ sylius_grid:
             driver:
                 name: doctrine/orm
                 options:
-                    class: Nugato\Bundle\NuCmsBundle\Entity\Locale
+                    class: Nugato\Bundle\NuCmsBundle\Component\Locale\Entity\Locale
             sorting:
                 id: desc
             fields:
