--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/component/doctrine/Navigation.Entity.NavigationItemTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/component/doctrine/Navigation.Entity.NavigationItemTranslation.orm.yml
@@ -1,7 +1,7 @@
 # This file is part of the NuCms package.
 # (c) Jacek Bednarek
 
-Nugato\Bundle\NuCmsBundle\Entity\Navigation\NavigationItemTranslation:
+Nugato\Bundle\NuCmsBundle\Component\Navigation\Entity\NavigationItemTranslation:
     type: entity
     table: nucms_navigation_item_translation
     id:
