--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids/admin/navigation.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids/admin/navigation.yml
@@ -7,7 +7,7 @@ sylius_grid:
             driver:
                 name: doctrine/orm
                 options:
-                    class: Nugato\Bundle\NuCmsBundle\Entity\Navigation\Navigation
+                    class: Nugato\Bundle\NuCmsBundle\Component\Navigation\Entity\Navigation
             sorting:
                 createdAt: desc
             fields:
