--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         "knplabs/knp-menu-bundle": "^2.0",
         "liip/imagine-bundle": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.3.10",
+        "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "^3.4|^4.1",
         "twig/twig": "^1.0||^2.0",
         "sylius/fixtures-bundle": "^1.2",
@@ -77,12 +77,14 @@
             "src/Nugato/*/*/Tests/"
         ]
     },
-
     "autoload-dev": {
         "psr-4": {
             "Nugato\\Tests\\": "tests/"
         },
-        "classmap": ["app/AppKernel.php", "app/AppCache.php"]
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
     },
     "config": {
         "sort-packages": true,
