Fix templates paths

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/file.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/file.yml
@@ -6,6 +6,6 @@ nucms_admin_locale:
     resource: |
         alias: nucms.file
         section: admin
-        templates: NugatoNuCmsBundle:Admin/Crud
+        templates: '@NugatoNuCms/Admin/Crud'
         grid: nucms_admin_file
         redirect: update
