--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/locale.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/admin/locale.yml
@@ -6,6 +6,6 @@ nucms_admin_locale:
     resource: |
         alias: nucms.locale
         section: admin
-        templates: NugatoNuCmsBundle:Admin/Crud
+        templates: '@NugatoNuCms/Admin/Crud'
         grid: nucms_admin_locale
         redirect: update
