--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
@@ -13,6 +13,10 @@ imports:
     - { resource: "@NugatoNuCmsBundle/Resources/config/fixtures.yml" }
     - { resource: "@SyliusTaxonomyBundle/Resources/config/app/config.yml" }
 
+framework:
+    templating:
+        engines: ['twig']
+
 fos_rest:
     exception: ~
     view:
