--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,9 +3,9 @@
 
 imports:
     - { resource: "@NugatoNuCmsBundle/Resources/config/config.yml" }
+    - { resource: "@NugatoNuCmsBundle/Resources/config/security.yml" }
 
     - { resource: parameters.yml }
-    - { resource: security.yml }
     - { resource: services.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
