--- a/composer.json
+++ b/composer.json
@@ -22,19 +22,20 @@
         "knplabs/knp-gaufrette-bundle": "~0.5",
         "knplabs/knp-menu-bundle": "^2.0",
         "liip/imagine-bundle": "^2.0",
+        "nelmio/cors-bundle": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.6.4",
-        "symfony/symfony": "^3.4|^4.1",
-        "twig/twig": "^1.0||^2.0",
         "sylius/fixtures-bundle": "^1.2",
         "sylius/grid-bundle": "^1.2",
         "sylius/locale-bundle": "^1.2",
         "sylius/resource-bundle": "^1.2",
         "sylius/taxonomy-bundle": "^1.2",
-        "sylius/user-bundle": "^1.2"
+        "sylius/user-bundle": "^1.2",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/polyfill-apcu": "^1.0",
+        "symfony/swiftmailer-bundle": "^2.6.4",
+        "symfony/symfony": "^3.4|^4.1",
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "behat/behat": "^3.2",
