--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/config.yml
@@ -84,3 +84,22 @@ liip_imagine:
         lg:
             filters:
                 thumbnail: { size: [640, 480], mode: inset }
+
+# Nelmio CORS Configuration
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: false
+        forced_allow_origin_value: ~
+    paths:
+        '^/':
+            allow_origin: ['*']
+            allow_headers: ["content-type", "authorization"]
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
+            max_age: 3600
