--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/api.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/api.yml
@@ -2,4 +2,22 @@
 # (c) Jacek Bednarek
 
 nucms_api_page:
-    resource: api/page.yml
+    type: sylius.resource_api
+    resource: |
+        alias: nucms.page
+        section: api
+        serialization_version: 1
+
+nucms_api_locale:
+    type: sylius.resource_api
+    resource: |
+        alias: nucms.locale
+        section: api
+        serialization_version: 1
+
+nucms_api_file:
+    type: sylius.resource_api
+    resource: |
+        alias: nucms.file
+        section: api
+        serialization_version: 1
