Create settings module

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/grids.yml
@@ -2,11 +2,7 @@
 # (c) Jacek Bednarek
 
 imports:
-    - { resource: 'grids/admin/locale.yml' }
-    - { resource: 'grids/admin/page.yml' }
-    - { resource: 'grids/admin/taxon.yml' }
-    - { resource: 'grids/admin/navigation.yml' }
-    - { resource: 'grids/admin/file.yml' }
+    - { resource: 'grids/admin/*.yml' }
 
 sylius_grid:
     templates:
