--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services.yml
@@ -2,11 +2,6 @@
 # (c) Jacek Bednarek
 
 imports:
-    - { resource: "services/controller.yml" }
-    - { resource: "services/locale.yml" }
-    - { resource: "services/user.yml" }
-    - { resource: "services/page.yml" }
-    - { resource: "services/navigation.yml" }
-    - { resource: "services/file.yml" }
+    - { resource: "services/*.yml" }
 
 services:
