Add TYPES to settings

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Settings.Entity.Settings.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Settings.Entity.Settings.orm.yml
@@ -11,6 +11,10 @@ Nugato\Bundle\NuCmsBundle\Component\Settings\Entity\Settings:
             id: true
             generator:
                 strategy: AUTO
+    embedded:
+        type:
+            class: Nugato\Bundle\NuCmsBundle\Component\Settings\ValueObject\SettingsType
+            columnPrefix: false
     fields:
         code:
             type: string
