--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/web.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/web.yml
@@ -3,23 +3,23 @@
 
 nucms_web_homepage:
     path: /
-    defaults: { _controller: nucms.controller.web.page:homePage }
+    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:homePage' }
 
 nucms_web_homepage_locale:
     path: /{_locale}/
-    defaults: { _controller: nucms.controller.web.page:homePage, _locale: '%locale%' }
+    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:homePage', _locale: '%locale%' }
     requirements:
         _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
 
 nucms_web_single_page:
     path: /{slug}
-    defaults: { _controller: nucms.controller.web.page:singlePage, _locale: '%locale%' }
+    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:singlePage', _locale: '%locale%' }
     requirements:
         _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
 
 nucms_web_single_page_locale:
     path: /{_locale}/{slug}
-    defaults: { _controller: nucms.controller.web.page:singlePage, _locale: '%locale%' }
+    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:singlePage', _locale: '%locale%' }
     requirements:
         _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
 
