--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,8 +6,8 @@ services:
             context: "."
             dockerfile: "mariadb/Dockerfile"
         environment:
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
-            MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_DATABASE: ${MARIADB_DATABASE}
+            MYSQL_ROOT_PASSWORD: ${MARIADB_PASSWORD}
             TZ: Europe/Warsaw
         ports:
             - ${MARIADB_EXTERNAL_PORT}:3306
