--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,7 +13,10 @@ parameters:
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: ~
+    mailer_user_name: nucms
     mailer_password: ~
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+
+    nucms_email_receiver: ~
