--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "sylius/resource-bundle": "^1.2",
         "sylius/taxonomy-bundle": "^1.2",
         "sylius/user-bundle": "^1.2",
+        "sylius/mailer-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
