--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/controller.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/controller.yml
@@ -7,25 +7,22 @@ services:
         autoconfigure: true
         public: false
 
+    Nugato\Bundle\NuCmsBundle\Controller\Web\:
+        resource: '../../../Controller/Web'
+        tags: ['controller.service_arguments']
+
     Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:
-#        class: Nugato\Bundle\NuCmsBundle\Controller\Web\PageController
         arguments:
-            - '@nucms.context.locale.request_based_with_default'
+            - '@Nugato\Bundle\NuCmsBundle\Context\WebLocaleContextInterface'
             - '@sylius.locale_provider'
             - '@nucms.repository.page'
         tags: ['controller.service_arguments']
 
-    nucms.controller.web.locale_switch:
-        class: Nugato\Bundle\NuCmsBundle\Controller\Web\LocaleSwitchController
+    Nugato\Bundle\NuCmsBundle\Controller\Web\LocaleSwitchController:
         arguments:
-            - '@nucms.context.locale.request_based_with_default'
+            - '@Nugato\Bundle\NuCmsBundle\Context\WebLocaleContextInterface'
             - '@sylius.locale_provider'
         tags: ['controller.service_arguments']
 
-    nucms.controller.web.navigation:
-        class: Nugato\Bundle\NuCmsBundle\Controller\Web\NavigationController
-        arguments:
-            - '@nucms.context.locale.request_based_with_default'
-            - '@nucms.repository.navigation'
-            - '@nucms.repository.navigation_item'
+    Nugato\Bundle\NuCmsBundle\Controller\Web\NavigationController:
         tags: ['controller.service_arguments']
