--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/web.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/routing/web.yml
@@ -11,10 +11,6 @@ nucms_web_homepage_locale:
     requirements:
         _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
 
-nucms_web_contact_form:
-    path: /contact
-    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\ContactController:requestForm' }
-
 nucms_web_single_page:
     path: /{slug}
     defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\PageController:singlePage', _locale: '%locale%' }
@@ -31,3 +27,8 @@ nucms_web_locale_switch:
     path: /locale-switch/{code}
     methods: [GET]
     defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\LocaleSwitchController:switch' }
+
+nucms_web_contact_send:
+    path: /contact-form/send
+    methods: [POST]
+    defaults: { _controller: 'Nugato\Bundle\NuCmsBundle\Controller\Web\ContactController:sendForm' }
