Add metatags fields

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Entity.PageTranslation.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Entity.PageTranslation.orm.yml
@@ -28,6 +28,13 @@ Nugato\Bundle\NuCmsBundle\Entity\PageTranslation:
                     updatable: false
                     fields:
                         - title
+        metaTitle:
+            type: string
+            length: 255
+            nullable: true
+        metaDescription:
+            type: text
+            nullable: true
     indexes:
         search_idx:
             columns: title, slug, locale
