--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/blog.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/services/blog.yml
@@ -9,3 +9,12 @@ services:
     Nugato\Bundle\NuCmsBundle\Component\Blog\Form\PostTranslationType:
         arguments: ['%nucms.model.blog_post_translation.class%', ['sylius']]
         tags: [{ name: form.type }]
+
+    # Fixtures
+    nucms.fixture.blog_post:
+        class: Nugato\Bundle\NuCmsBundle\Component\Blog\Fixture\PostFixture
+        arguments:
+            - '@nucms.factory.blog_post'
+            - '@nucms.factory.blog_post_translation'
+            - '@nucms.manager.blog_post'
+        tags: [sylius_fixtures.fixture]
