--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Blog.Entity.Post.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Blog.Entity.Post.orm.yml
@@ -26,6 +26,14 @@ Nugato\Bundle\NuCmsBundle\Component\Blog\Entity\Post:
             gedmo:
                 timestampable:
                     on: update
+    manyToOne:
+        mainTaxon:
+            targetEntity: Nugato\Bundle\NuCmsBundle\Entity\Taxon
+            joinColumn:
+                name: main_taxon
+                referencedColumnName: id
+                nullable: true
+                onDelete: CASCADE
     uniqueConstraints:
         search_idx:
             columns:
