Add image to blog post

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Blog.Entity.Post.orm.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/config/doctrine/Component.Blog.Entity.Post.orm.yml
@@ -34,6 +34,13 @@ Nugato\Bundle\NuCmsBundle\Component\Blog\Entity\Post:
                 referencedColumnName: id
                 nullable: true
                 onDelete: CASCADE
+        image:
+            targetEntity: Nugato\Bundle\NuCmsBundle\Entity\File\File
+            joinColumn:
+                name: image
+                referencedColumnName: id
+                nullable: true
+                onDelete: CASCADE
     manyToMany:
         taxons:
             targetEntity: Nugato\Bundle\NuCmsBundle\Entity\Taxon
